--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -22,6 +22,9 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
+  instance:
+    instance-id: payment8002
+    prefer-ip-address: true
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
