--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
       <module>cloud-provider-consul-payment8005</module>
       <module>cloud-consumer-feign-order80</module>
       <module>cloud-consumer-feign-order80</module>
+      <module>cloud-provider-hystrix-payment8001</module>
+      <module>OrderHystrixMain80</module>
+      <module>cloud-consumer-hystrix-dashboard9001</module>
   </modules>
   <packaging>pom</packaging>
 
