--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -6,14 +6,19 @@ spring:
     name: cloud-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true
       routes:
         - id: payment_routh # 路由的ID，没有固定规则要求唯一，建议配合服务名
-          uri: http://localhost:8001  # 匹配后提供服务的路由地址
+          # uri: http://localhost:8001  # 匹配后提供服务的路由地址
+          uri: lb://cloud-payment-service  # 匹配后提供服务的路由地址
           predicates:
             - Path=/payment/**  # 断言，路径匹配得到进行路由
 
         - id: payment_routh2
-          uri: http://localhost:8001
+          # uri: http://localhost:8001]]
+          uri: lb://cloud-payment-service
           predicates:
             - Path=/payment/lb/**
 
